# vcpkg_bug

./: README.md
gettext_8484/: CMakeLists.txt  test.cpp  test.mo  test.po
gettext_8484/be/LC_MESSAGES/: test.mo
gettext_8484/zh/LC_MESSAGES/: test.mo
